--- a/pom.xml
+++ b/pom.xml
@@ -317,6 +317,9 @@ Bundle-DocURL:
                     <artifactId>aemanalyser-maven-plugin</artifactId>
                     <version>${aemanalyser.version}</version>
                     <extensions>true</extensions>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>io.wcm.maven.plugins</groupId>
