--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,6 @@ jobs:
         image: ghcr.io/orbinson/aem-sdk:author-2024.10.18459.20241031T210302Z-241000
         ports:
           - 4502:4502
-        volumes:
-          - /logs:/opt/aem/home/var/instance/author/crx-quickstart/logs
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -41,15 +39,9 @@ jobs:
         run: mvn install -B -U -PautoInstallPackage -pl it.content
       - name: Run ui.tests
         run: mvn test -B -pl ui.tests -DskipTests=false
-      - name: "Upload Playwright Report"
+      - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: ui.tests/playwright-report/
-      - name: "Upload AEM logs"
-        uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: logs
-          path: /logs
